Fixed about me panel on mobile
Closes #14

--- a/css/theme.css
+++ b/css/theme.css
@@ -11813,102 +11813,6 @@ a.skip-link {
   display: block;
 }
 
-body {
-  overflow-x: hidden;
-}
-body > * {
-  transition: background-color 0.5s, color 0.5s;
-}
-body.dark-mode {
-  background-color: #000000;
-}
-body.dark-mode .cursor.is-active .cursor-circle {
-  background-color: #ecf0f1;
-}
-body.dark-mode h1, body.dark-mode h2, body.dark-mode h3, body.dark-mode h4, body.dark-mode h5, body.dark-mode h6 {
-  color: #ecf0f1;
-  background-color: #000000;
-  border-color: #ecf0f1;
-  background-image: url("../img/arrow-l.svg");
-}
-body.dark-mode .navbar-brand {
-  background: none;
-}
-body.dark-mode .display-1 {
-  background-image: none;
-}
-body.dark-mode .wp-block-file {
-  background-color: #000000;
-  background-image: url("../img/file-l.svg");
-}
-body.dark-mode p {
-  color: #ecf0f1;
-}
-body.dark-mode div {
-  color: #ecf0f1;
-  border-color: #ecf0f1 !important;
-}
-body.dark-mode figure {
-  border-color: #ecf0f1 !important;
-}
-body.dark-mode span {
-  color: #ecf0f1;
-}
-body.dark-mode a {
-  color: #ecf0f1 !important;
-  border-bottom: 1px #ecf0f1 solid !important;
-}
-body.dark-mode nav a {
-  border-bottom: none !important;
-}
-body.dark-mode .project-menu {
-  background-color: #000000;
-}
-body.dark-mode .content-card {
-  border-color: #ecf0f1;
-}
-body.dark-mode .wp-block-image {
-  background-color: #000000;
-}
-body.dark-mode .contact-card {
-  background-color: #000000 !important;
-}
-body.dark-mode .bg-a, body.dark-mode #main .about-me .left, #main .about-me body.dark-mode .left {
-  background-image: url("../img/bg-a-d.svg") !important;
-  background-size: 85px;
-}
-body.dark-mode .bg-b {
-  background-image: url("../img/bg-b-d.svg") !important;
-  background-size: 80px;
-}
-body.dark-mode .entry-content .divider {
-  background-color: #ecf0f1;
-}
-body.dark-mode .entry-content figure {
-  border-color: #ecf0f1;
-}
-body.dark-mode .entry-content > div, body.dark-mode .entry-content > p {
-  border-color: #ecf0f1 !important;
-}
-body.dark-mode .entry-content hr {
-  border-color: #ecf0f1 !important;
-}
-body.dark-mode .entry-content .slider-index {
-  background-color: #000000;
-}
-body.dark-mode .entry-content .wp-block-gallery .blocks-gallery-item figcaption {
-  background-color: #000000;
-}
-body.dark-mode .entry-content .wp-block-embed-vimeo figcaption {
-  background-color: #000000;
-}
-body.dark-mode .project-details {
-  border-color: #ecf0f1;
-}
-body.dark-mode .project-details .project-detail {
-  border-color: #ecf0f1;
-}
-
 h1, h2, h3 {
   font-weight: 200;
 }
@@ -11922,6 +11826,10 @@ h2 {
 
 .wrapper {
   padding: 0 !important;
+}
+
+.hidden {
+  display: none !important;
 }
 
 body {
@@ -11975,49 +11883,6 @@ figcaption {
 #main .main-contents .project-thumbnail .project-title,
 .display-5 {
   font-family: "neue-haas-grotesk-text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.cursor {
-  position: fixed;
-  z-index: 10000;
-  pointer-events: none;
-  overflow: visible;
-  transform: translateX(-25%) translateY(-25%);
-}
-@media (max-width: 576px) {
-  .cursor {
-    visibility: hidden;
-  }
-}
-.cursor .cursor-text {
-  position: absolute;
-  z-index: 10;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #000000;
-  font-size: 60px;
-  text-align: center;
-  transition: linear all 0.2s;
-}
-.cursor .cursor-circle {
-  position: relative;
-  background-color: #0000ff;
-  width: 30px;
-  height: 30px;
-  border: none;
-  border-radius: 100% 100%;
-  color: #fff;
-  backface-visibility: hidden;
-  -webkit-font-smoothing: subpixel-antialiased;
-  transform: translateZ(0);
-  transition: linear transform 0.2s;
-}
-.cursor.is-active .cursor-circle {
-  background-color: #000;
-}
-.cursor.has-text .cursor-circle {
-  visibility: hidden;
 }
 
 .site-container {
@@ -12094,25 +11959,6 @@ figcaption {
 }
 .nav .open-button.opened {
   transform: scale(1.8) rotate(-135deg) translateX(4px) translateY(7px);
-}
-
-.navbar {
-  z-index: 1000;
-  font-size: 1rem;
-}
-.navbar .navbar-brand {
-  letter-spacing: 3px;
-  font-kerning: none;
-}
-.navbar .navbar-title {
-  margin: 0;
-  color: #0000ff;
-}
-.navbar a {
-  border-bottom: none;
-}
-.navbar .nav-link {
-  padding-right: 0;
 }
 
 @media (max-width: 768px) {
@@ -12322,9 +12168,6 @@ figcaption {
 #main .main-header h1 {
   margin-left: -40px;
 }
-#main .about-me-old {
-  display: none;
-}
 #main .about-me {
   flex-basis: calc(50% + 0.5 * 100px);
   max-width: calc(50% + 0.5 * 100px);
@@ -12339,6 +12182,8 @@ figcaption {
 @media (max-width: 768px) {
   #main .about-me {
     max-width: 100vw;
+    position: absolute;
+    top: 0;
   }
 }
 #main .about-me h2 {
@@ -12355,14 +12200,25 @@ figcaption {
   position: sticky;
   top: 0;
   background-color: white;
-}
-#main .about-me .about-header h1 {
   display: flex;
+  align-items: center;
   justify-content: space-between;
+}
+#main .about-me .about-header span {
   font-size: 1.8em;
 }
-#main .about-me .about-header h1 .close-button {
-  transform: scale(1.8) translateY(4px);
+#main .about-me .about-header span.close-button {
+  transform: scale(1.6) translateY(4px);
+}
+@media (max-width: 768px) {
+  #main .about-me .about-header {
+    height: 100px;
+    border-bottom: 2px solid black;
+    border-right: none;
+  }
+  #main .about-me .about-header span {
+    font-size: 1.6em;
+  }
 }
 #main .about-me.collapsed {
   transform: translate(-150%);
